--- a/index.html
+++ b/index.html
@@ -1,17 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ice Cream Shop</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+
 <body>
-    
+
+    <header>
+        <h1>Ice Cream Shop</h1>
+    </header>
+    <form id="iceCreamForm">
+        <div class="mb-3">
+            <label for="numOfScoops">Number of Scoops</label>
+            <input id="numOfScoops" name="numOfScoops" type="number" required>
+        </div>
+        <!-- Radio form for cone and cup options -->
+        <div class="mb-3">
+            <input type="radio" name="coneOrCup" id="coneOrCup" value="cone" checked>
+            <label for="coneOrCup">Cone</label>
+            <input type="radio" name="coneOrCup" id="coneOrCup" value="cup">
+            <label for="coneOrCup">Cup</label>
+
+        </div>
+        <section class="my-3 w-50" id="toppings">
+            <h4>Toppings</h4>
+            <div class="border border-bottom-0 border-dark">
+                <input id="sprinkles" name="sprinkles" type="checkbox">
+                <label for="sprinkles">Sprinkles ($.50)</label>
+                <input id="whippedCream" name="whippedCream" type="checkbox">
+                <label for="whippedCream">Whipped Cream ($.25)</label>
+            </div>
+            <div class="border border-top-0 border-dark">
+                <input id="hotFudge" name="hotFudge" type="checkbox">
+                <label for="hotFudge">Hot Fudge ($1.25)</label>
+                <input id="cherry" name="cherry" type="checkbox">
+                <label for="cherry">Cherry ($0.25)</label>
+            </div>
+        </section>
+        <button>Submit Order</button>
+    </form>
+
+    <!-- Div that will hold the output of the rental car estimator -->
+    <div class="mt-3" id="results"></div>
+</section>
+
+    </form>
 
 
-   
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <script src="scripts/index.js"></script>
 </body>
+
 </html>
